# IcedPFS

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  fleet.toml  toast.yml
.cargo/: config.toml
.github/workflows/: ci.yml
fleet_runner/: Dockerfile  README.md
src/: gui.rs  ipfs_client.rs  main.rs  utils.rs
src/gui/: messages.rs  views.rs  widgets.rs
src/gui/views/: home.rs  settings.rs  stats.rs  tab.rs  upload.rs  welcome.rs  welcome_view.rs
src/gui/widgets/: tab_bar.rs
src/ipfs_client/: api.rs  connection.rs  models.rs
src/ipfs_client/api/: bandwidth.rs  files.rs  stats.rs
