[package]
name = "iced_pfs"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/SkymanOne/IcedPFS"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.4", features = ["pure", "tokio"] }
iced_native = "0.5.1"
tokio = { version = "1", features = ["rt"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
futures = "0.3"
async-trait = "0.1.56"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
