[package]
name = "iced_pfs"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/SkymanOne/IcedPFS"
license = "MIT OR Apache-2.0"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.4", features = ["pure", "tokio"] }
iced_lazy = { version = "0.1.0", features = ["pure"] }
iced_pure = "0.2"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
