[package]
name = "iced_pfs"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/SkymanOne/IcedPFS"
license = "MIT OR Apache-2.0"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.4", features = ["pure", "tokio"] }
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
futures = "0.3"
rfd = "0.9"
tokio = { version = "1.19", features = ["fs"] }
tokio-util= { version = "0.7", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
